<resources>
    <string name="app_name">SimpleCalculator</string>
    <!-- Hint for first operand EditText -->
    <string name="type_operand_one_hint">Type Operand 1</string>

    <!-- Hint for second operand EditText -->
    <string name="type_operand_two_hint">Type Operand 2</string>

    <!-- Button label for add operation -->
    <string name="add_operation_text">Add</string>

    <!-- Button label for subtract operation -->
    <string name="sub_operation_text">Sub</string>

    <!-- Button label for divide operation -->
    <string name="div_operation_text">Div</string>

    <!-- Button label for mul operation -->
    <string name="mul_operation_text">Mul</string>

    <!-- Button label for Pow operation -->
    <string name="power_operation_text">Pow</string>

    <!-- Button label for Fact operation -->
    <string name="fact_operation_text">Fact</string>

    <!-- Button label for logarit operation -->
    <string name="log_operation_text">Log</string>

    <!-- Message for textview in case of errors  -->
    <string name="computationError">Error</string>
</resources>